added a new paragraph

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>glitz and glam</title>
   </head>
-  <body></body>
+  <body>
+    <p>This is the best Bautique in ksm.</p>
+  </body>
 </html>
