first style was added on the paragraph

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>glitz and glam</title>
   </head>
   <body>
-    <p>This is the best Bautique in ksm.</p>
+    <p>This is the best <strong>Bautique</strong> in ksm.</p>
   </body>
 </html>
