added images,styles.css and few styles on the header

--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="style.css" type="text/css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>glitz and glam</title>
   </head>
   <body>
+    <h1>Watoto's corner</h1>
     <p>This is the best <strong>Bautique</strong> in ksm.</p>
+    <p>It's a place where you will <em>get things</em> like:</p>
+    <div id="list">
+      <ul>
+        <li>Overalls</li>
+        <li>Mittens</li>
+        <li>Socks</li>
+        <li>shoes</li>
+      </ul>
+    </div>
+    <p>
+      These are the examples of clothing you might get when you
+      <span class="bolder">visit</span> us ;
+    </p>
+    <div class="socks">
+      <img src="images/socks.jpg" alt="Socks" />
+
+      <img src="images/download.jpeg" alt="Mittens" />
+    </div>
+    <p>
+      For more infomation find us on
+      <a href="">https://totosworld.com</a>
+    </p>
   </body>
 </html>
